assets/css/style.scss
/* ... */
/* Article
-------------------------------------------------- */
article {
  header {
    margin-top: 24px;
    margin-bottom: var(--content-gap);
  }
  .post-title {
    margin-bottom: 2px;
    font-size: 2em;
    transform: translateX(-2px);
  }
  .post-meta {
    color: var(--secondary-text-color);
    font-size: 16px;
  }
  .post-content h1 {
    margin-top: 40px;
    margin-bottom: 32px;
  }
  .post-content h2 {
    margin-top: 32px;
    margin-bottom: 24px;
  }
  .post-content h3 {
    margin-top: 24px;
    margin-bottom: 16px;
  }
  .post-content h4,
  .post-content h5,
  .post-content h6 {
    margin-top: 24px;
    margin-bottom: 8px;
  }
  .post-content h1 {
    font-size: 40px;
  }
  .post-content h2 {
    font-size: 32px;
  }
  .post-content h3 {
    font-size: 24px;
  }
  .post-content h4 {
    font-size: 19px;
  }
  .post-content h5 {
    font-size: 18px;
  }
  .post-content h6 {
    font-size: 16px;
  }
  .post-content a code {
    margin-left: 0;
    margin-right: 0;
    border-radius: 0;
    box-shadow: 0 -1px 0 var(--text-color) inset;
  }
  .post-content del {
    text-decoration: none;
    background: linear-gradient(to right, var(--text-color) 100%, transparent 0) 0
      50% / 1px 1px repeat-x;
  }
  .post-content p,
  .post-content ul,
  .post-content ol,
  .post-content dl {
    margin-bottom: var(--content-gap);
  }
  .post-content ul,
  .post-content ol {
    padding-left: 20px;
  }
  .post-content li {
    margin-top: 5px;
  }
  .post-content li p {
    margin-bottom: 0;
  }
  .post-content dl {
    display: flex;
    flex-wrap: wrap;
    margin: 0;
  }
  .post-content dt {
    width: 25%;
    font-weight: 700;
  }
  .post-content dd {
    width: 75%;
    margin-left: 0;
    padding-left: 10px;
  }
  .post-content dt ~ dt,
  .post-content dd ~ dd {
    margin-top: 10px;
  }
  .post-content table {
    margin-bottom: 32px;
  }
  .post-content table th,
  .post-content table:not(.highlighttable) td {
    min-width: 80px;
    padding: 12px 8px;
    line-height: 1.5;
    border-bottom: 1px solid var(--border);
  }
  .post-content table th {
    font-size: 14px;
    text-align: left;
  }
  .post-content table:not(.highlighttable) td code:only-child {
    margin-left: 0;
    margin-right: 0;
  }
  .post-content .highlight,
  .post-content pre {
    margin-left: calc(var(--gap) * -1);
    margin-right: calc(var(--gap) * -1);
    margin-bottom: 32px;
    background: var(--hljs-bg) !important;
    border-radius: var(--radius);
  }
  .post-content .highlight pre {
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 0;
  }
  /* table */
  .post-content .highlighttable {
    table-layout: fixed;
  }
  .post-content .highlighttable td:first-child {
    width: 40px;
  }
  .post-content .highlighttable td .linenodiv {
    padding-right: 0 !important;
  }
  .post-content .highlighttable td .linenodiv pre,
  .post-content .highlighttable td .highlight {
    margin-bottom: 0;
  }
  .post-content .highlighttable td .highlight pre code::-webkit-scrollbar {
    display: none;
  }
  /* inline */
  .post-content .highlight span {
    background: transparent !important;
  }

  .post-content code {
    margin-left: 4px;
    margin-right: 4px;
    padding: 4px 6px;
    font-family: Menlo, Monaco, "Courier New", Courier, monospace;
    font-size: 0.78em;
    line-height: 1.5;
    background: var(--code-bg);
    border-radius: 2px;
  }
  .post-content pre code {
    display: block;
    margin-left: 0;
    margin-right: 0;
    padding: var(--gap);
    color: rgba(255, 255, 255, 0.8);
    background: transparent;
    border-radius: 0;
  }
  .post-content blockquote {
    margin: 0 0 0 calc(var(--gap) * -1);
    padding: 0 0 0 21px;
    border-left: 3px solid var(--text-color);
  }
  .post-content hr {
    height: 2px;
    margin-top: var(--content-gap);
    margin-bottom: var(--content-gap);
    background: var(--tertiary);
    border-top: 0;
    border-bottom: 0;
    border: 0px;
  }
  .post-content iframe {
    max-width: 100%;
  }
  footer {
    margin-top: var(--content-gap);
  }
  .post-tags li {
    display: inline-block;
  }
  .post-tags li + li {
    margin-left: 8px;
  }
  .post-tags a {
    display: block;
    padding-left: 14px;
    padding-right: 14px;
    color: var(--primary-invert-color);
    font-size: 14px;
    line-height: 34px;
    background: var(--primary-color);
    border-radius: 2px;
  }
  .post-tags a:hover {
    background: var(--primary-color-darken);
  }
}
/* Footer
-------------------------------------------------- */
.page-footer {
  padding: var(--gap);
  background: var(--tertiary);
  .content {
    max-width: calc(var(--nav-width) + var(--gap) * 2);
    margin-left: auto;
    margin-right: auto
  }
  p {
    font-size: 16px;
  }
  span {
    margin-left: 1px;
    margin-right: 1px;
  }
}
.row {
  padding: .75rem;
}
.column {
  padding: 0 var(--gap);
}
.column.left {
  width: 30%;
}
.column.right {
  width: 35%;
}
/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width: 850px) {
  .column {
    width: 100% !important;
    margin-bottom: var(--gap);
    padding: 0px;
  }
  .page-footer h3 {
    margin-bottom: calc(var(--gap) / 3);
  }
}
@media screen and (min-width: 850px) {
  .row {
    display: flex;
    flex-basis: 0;
    flex-grow: 1;
    flex-shrink: 1;
  }
  .page-footer h3 {
    margin-bottom: var(--gap);
  }
}

/* Others
-------------------------------------------------- */
.table-container {
  overflow-x: auto;
}

